<resources>
    <string name="app_name">토스트</string>

    <!-- Sample strings -->
    <string name="sample_score1">3</string>
    <string name="sample_score2">11</string>
    <string name="sample_class1">4반</string>
    <string name="sample_class2">11반</string>
    <string name="sample_win_with_text">이긴 횟수: 4</string>
    <string name="sample_win">4회</string>
    <string name="sample_vote_rate">100%</string>

    <!-- activity_splash -->
    <string name="text_splash_title">Toast</string>

    <!-- activity_main -->
    <string name="text_main_battle">경기</string>
    <string name="text_main_class">반</string>

    <!-- battle_list_item -->
    <string name="text_divide_class">:</string>

    <!-- activity_class_info -->
    <string name="text_class_info_win">이긴 횟수</string>
    <string name="text_class_info_vote_rate">우승 투표</string>
</resources>
