<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="90dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/battle_list_rounded_rectangle"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_battle_class1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_square_round_bold"
            android:gravity="center"
            android:text="@string/sample_class1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nanum_square_round_bold"
            android:text="@string/text_divide_class" />


        <TextView
            android:id="@+id/tv_battle_class2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanum_square_round_bold"
            android:gravity="center"
            android:text="@string/sample_class2"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_battle_score1"
            style="@style/scoreTextView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sample_score1"
            android:textColor="@color/colorLowScore" />

        <TextView
            style="@style/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/text_divide_class" />

        <TextView
            android:id="@+id/tv_battle_score2"
            style="@style/scoreTextView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sample_score2"
            android:textColor="@color/colorHighScore" />

    </LinearLayout>

</LinearLayout>